@@ -1,2 +1,0 @@
-usr/include/pci
-usr/share/doc
