@@ -1,2 +1,1 @@
 usr/share/misc
-usr/bin
