@@ -1,4 +1,0 @@
-usr/share/misc
-usr/share/man
-usr/sbin
-usr/bin
