@@ -1,1 +1,6 @@
-usr/update-pciids usr/sbin
+usr/bin/update-pciids usr/sbin
+usr/bin/lspci
+usr/bin/setpci
+usr/share/misc/
+usr/share/man/man7/
+usr/share/man/man8/
