@@ -54,35 +54,16 @@ binary-arch: build
 	dh_prep
 	dh_installdirs -a
 
-	$(MAKE) $(confflags) install DESTDIR=debian/pciutils SHARED=no
+	$(MAKE) $(confflags) install install-lib DESTDIR=debian/tmp
 
 	# pciutils
-	gunzip debian/pciutils/usr/share/misc/pci.ids.gz
-	mv debian/pciutils/usr/bin/update-pciids debian/pciutils/usr/sbin
-
-	# libpci-dev
-	mkdir -p debian/libpci-dev/usr/lib/$(DEB_HOST_MULTIARCH)/pkgconfig
-	install -m 644 lib/libpci.a debian/libpci-dev/usr/lib/$(DEB_HOST_MULTIARCH)
-	install -m 644 lib/pci.h lib/header.h lib/config.h lib/types.h \
-			debian/libpci-dev/usr/include/pci/
-	install -m 644 lib/libpci.pc debian/libpci-dev/usr/lib/$(DEB_HOST_MULTIARCH)/pkgconfig/
-	ln -s /lib/$(DEB_HOST_MULTIARCH)/libpci.so.3.5.2 debian/libpci-dev/usr/lib/$(DEB_HOST_MULTIARCH)/libpci.so
-
-	# libpci3
-	mkdir -p debian/libpci3/lib/$(DEB_HOST_MULTIARCH)
-	install -m 644 lib/libpci.so* debian/libpci3/lib/$(DEB_HOST_MULTIARCH)
-	ln -s libpci.so.3.5.2 debian/libpci3/lib/$(DEB_HOST_MULTIARCH)/libpci.so.3
+	gunzip debian/tmp/usr/share/misc/pci.ids.gz
 
 	# pciutils-udeb
-	install -m 755 debian/pciutils/usr/bin/lspci debian/pciutils-udeb/usr/bin/
 	# Reduce by removing subsystem ids and comments.
 	perl -ne 'print unless /^(\s*#|\s*$|\t\t)/' < pci.ids |gzip -9n > debian/pciutils-udeb/usr/share/misc/pci.ids.gz
-	chmod 644 debian/pciutils-udeb/usr/share/misc/pci.ids.gz
 
-	# libpci3-udeb
-	install -m 644 lib/libpci.so* debian/libpci3-udeb/lib/
-	ln -s libpci.so.3.5.2 debian/libpci3-udeb/lib/libpci.so.3
-
+	dh_install -a
 	dh_installdocs -a
 	dh_installexamples -a
 	dh_installmenu -a
